tests/baselines/reference/implicitAnyDeclareMemberWithoutType2.errors.txt
implicitAnyDeclareMemberWithoutType2.ts(4,12): error TS2564: Property 'x1' has no initializer and is not definitely assigned in the constructor.
implicitAnyDeclareMemberWithoutType2.ts(6,17): error TS7006: Parameter 'c1' implicitly has an 'any' type.
implicitAnyDeclareMemberWithoutType2.ts(6,21): error TS7006: Parameter 'c2' implicitly has an 'any' type.
implicitAnyDeclareMemberWithoutType2.ts(7,13): error TS7006: Parameter 'f1' implicitly has an 'any' type.
implicitAnyDeclareMemberWithoutType2.ts(7,17): error TS7006: Parameter 'f2' implicitly has an 'any' type.


==== implicitAnyDeclareMemberWithoutType2.ts (5 errors) ====
    // this should be an error
    class C {
        public x = null;// error at "x"
        public x1: string  // no error
               ~~
!!! error TS2564: Property 'x1' has no initializer and is not definitely assigned in the constructor.
    
        constructor(c1, c2, c3: string) { }  // error at "c1, c2"
                    ~~
!!! error TS7006: Parameter 'c1' implicitly has an 'any' type.
                        ~~
!!! error TS7006: Parameter 'c2' implicitly has an 'any' type.
        funcOfC(f1, f2, f3: number) { }     // error at "f1,f2"
                ~~
!!! error TS7006: Parameter 'f1' implicitly has an 'any' type.
                    ~~
!!! error TS7006: Parameter 'f2' implicitly has an 'any' type.
    }
    